--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,13 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.6
+      uses: Burnett01/rsync-deployments@6.0.0
       with:
-        server: 158.69.60.81
-        username: onenetly
-        password: AmiMotiur27@
-        protocol: ftps
-        port: 22
-        server-dir: /home/onenetly/htdocs/onenetly.com/
+        switches: -avzr --delete
+        path: ./
+        remote_path: /home/onenetly/htdocs/onenetly.com/
+        remote_host: 158.69.60.81
+        remote_user: onenetly
+        remote_password: AmiMotiur27@
+        remote_port: 22
 
