--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,8 @@ jobs:
       uses: actions/checkout@v4
 
     - name: 📂 Sync files
-      uses: Burnett01/rsync-deployments@6.0.0
-      with:
-        switches: -avzr --delete
-        path: ./
-        remote_path: /home/onenetly/htdocs/onenetly.com/
-        remote_host: 158.69.60.81
-        remote_user: onenetly
-        remote_password: AmiMotiur27@
-        remote_port: 22
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y sshpass rsync
+        sshpass -p 'AmiMotiur27@' rsync -avzr --delete -e "ssh -o StrictHostKeyChecking=no -p 22" ./ onenetly@158.69.60.81:/home/onenetly/htdocs/onenetly.com/
 
